Colors, Markers, and Line Styles

--- a/Data Science/Plotting and Visualization/3 Colors, Markers, and Line Styles.ipynb
+++ b/Data Science/Plotting and Visualization/3 Colors, Markers, and Line Styles.ipynb
@@ -35,7 +35,7 @@
     "ax=fig.add_subplot()\n",
     "# ax.plot(np.random.standard_normal(30).cumsum(), color=\"black\", linestyle=\"dashed\", marker='o')\n",
     "data=np.random.standard_normal(30).cumsum()\n",
-    "ax.plot(data,color=\"black\",linestyle=\"dashed\", label=\"Default\")\n",
+    "ax.plot(data,color=\"black\",linestyle=\"dashed\", label=\"Default\") #labeled the plot\n",
     "ax.plot(data,color=\"black\",linestyle=\"dashed\", label=\"steps-post\", drawstyle=\"steps-post\")\n",
     "ax.legend()"
    ]
