--- a/Data Science/Pandas/100 Pandas Puzzles/100-pandas-puzzles.ipynb
+++ b/Data Science/Pandas/100 Pandas Puzzles/100-pandas-puzzles.ipynb
@@ -2294,122 +2294,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>a</th>\n",
-       "      <th>b</th>\n",
-       "      <th>c</th>\n",
-       "      <th>d</th>\n",
-       "      <th>e</th>\n",
-       "      <th>f</th>\n",
-       "      <th>g</th>\n",
-       "      <th>h</th>\n",
-       "      <th>i</th>\n",
-       "      <th>j</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.04</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.25</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.43</td>\n",
-       "      <td>0.71</td>\n",
-       "      <td>0.51</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.04</td>\n",
-       "      <td>0.76</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.67</td>\n",
-       "      <td>0.76</td>\n",
-       "      <td>0.16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.50</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.31</td>\n",
-       "      <td>0.40</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.24</td>\n",
-       "      <td>0.01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.49</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.62</td>\n",
-       "      <td>0.73</td>\n",
-       "      <td>0.26</td>\n",
-       "      <td>0.85</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.41</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.05</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.61</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.48</td>\n",
-       "      <td>0.68</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "      a   b     c     d     e     f     g     h     i     j\n",
-       "0  0.04 NaN   NaN  0.25   NaN  0.43  0.71  0.51   NaN   NaN\n",
-       "1   NaN NaN   NaN  0.04  0.76   NaN   NaN  0.67  0.76  0.16\n",
-       "2   NaN NaN  0.50   NaN  0.31  0.40   NaN   NaN  0.24  0.01\n",
-       "3  0.49 NaN   NaN  0.62  0.73  0.26  0.85   NaN   NaN   NaN\n",
-       "4   NaN NaN  0.41   NaN  0.05   NaN  0.61   NaN  0.48  0.68"
+       "0    e\n",
+       "1    c\n",
+       "2    d\n",
+       "3    h\n",
+       "4    d\n",
+       "dtype: object"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2424,11 +2323,21 @@
     "        [ nan,  nan, 0.41,  nan, 0.05,  nan, 0.61,  nan, 0.48, 0.68]]\n",
     "\n",
     "columns = list('abcdefghij')\n",
-    "\n",
+    "ans=[]\n",
     "df = pd.DataFrame(data, columns=columns)\n",
     "\n",
     "# write a solution to the question here\n",
-    "df"
+    "for row,col in df.iterrows():\n",
+    "    j=0\n",
+    "    for i in df.columns:\n",
+    "        if pd.isna(col[i]):\n",
+    "            j+=1\n",
+    "            if j==3:\n",
+    "                ans.append(i)\n",
+    "                break\n",
+    "ans\n",
+    "#so we can do this also from the solution\n",
+    "# (df.isna().cumsum(axis=1) == 3).idxmax(axis=1)"
    ]
   },
   {
