--- a/Data Science/Pandas/100 Pandas Puzzles/100-pandas-puzzles.ipynb
+++ b/Data Science/Pandas/100 Pandas Puzzles/100-pandas-puzzles.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -322,7 +322,7 @@
        "j    dog  3.0       1       no"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2294,9 +2294,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "e\n",
+      "c\n",
+      "d\n",
+      "h\n",
+      "d\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -2308,7 +2319,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2323,21 +2334,21 @@
     "        [ nan,  nan, 0.41,  nan, 0.05,  nan, 0.61,  nan, 0.48, 0.68]]\n",
     "\n",
     "columns = list('abcdefghij')\n",
-    "ans=[]\n",
+    "\n",
     "df = pd.DataFrame(data, columns=columns)\n",
     "\n",
     "# write a solution to the question here\n",
+    "\n",
     "for row,col in df.iterrows():\n",
     "    j=0\n",
     "    for i in df.columns:\n",
     "        if pd.isna(col[i]):\n",
     "            j+=1\n",
     "            if j==3:\n",
-    "                ans.append(i)\n",
-    "                break\n",
-    "ans\n",
-    "#so we can do this also from the solution\n",
-    "# (df.isna().cumsum(axis=1) == 3).idxmax(axis=1)"
+    "                print(i)\n",
+    "\n",
+    "#or I can do this instead\n",
+    "# (df.isna().cumsum(axis=1)==3).idxmax(axis=1)"
    ]
   },
   {
@@ -2365,12 +2376,70 @@
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>grps</th>\n",
+       "      <th>vals</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>a</td>\n",
+       "      <td>409</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>b</td>\n",
+       "      <td>156</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>c</td>\n",
+       "      <td>345</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  grps  vals\n",
+       "0    a   409\n",
+       "1    b   156\n",
+       "2    c   345"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df = pd.DataFrame({'grps': list('aaabbcaabcccbbc'), \n",
     "                   'vals': [12,345,3,1,45,14,4,52,54,23,235,21,57,3,87]})\n",
     "\n",
-    "# write a solution to the question here"
+    "# write a solution to the question here\n",
+    "df.sort_values(['grps','vals'],ascending=[True,False]).groupby('grps').head(3).groupby(\"grps\").sum().reset_index()"
    ]
   },
   {
@@ -2404,11 +2473,34 @@
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "g\n",
+       "0    635\n",
+       "1    360\n",
+       "2    315\n",
+       "3    306\n",
+       "4    750\n",
+       "5    284\n",
+       "6    424\n",
+       "7    526\n",
+       "8    835\n",
+       "9    852\n",
+       "Name: B, dtype: int32"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df = pd.DataFrame(np.random.RandomState(8765).randint(1, 101, size=(100, 2)), columns = [\"A\", \"B\"])\n",
-    "\n",
-    "# write a solution to the question here"
+    "# write a solution to the question here\n",
+    "df['g'] = (df[\"A\"]-1) // 10\n",
+    "df.groupby('g')['B'].sum() #thats should work. I am just showing those group by 0-9"
    ]
   },
   {
@@ -2447,8 +2539,34 @@
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    1\n",
+       "1    2\n",
+       "2    0\n",
+       "3    1\n",
+       "4    2\n",
+       "5    3\n",
+       "6    4\n",
+       "7    0\n",
+       "8    1\n",
+       "9    2\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame({'X': [7, 2, 0, 3, 4, 2, 5, 0, 3, 4]})\n",
+    "Y=df.groupby((df['X']==0).cumsum()).cumcount()\n",
+    "idx=(df['X']==0).idxmax()\n",
+    "Y[0:idx]+=1\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2464,13 +2582,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 189,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(2, 5), (5, 7), (6, 4)]"
+      ]
+     },
+     "execution_count": 189,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df = pd.DataFrame(np.random.RandomState(30).randint(1, 101, size=(8, 8)))"
+    "df = pd.DataFrame(np.random.RandomState(30).randint(1, 101, size=(8, 8)))\n",
+    "lr=list(df.max().nlargest(3))\n",
+    "ans=df.T.stack()[df.T.stack().isin(lr)].index\n",
+    "# ans=list(zip(ans[1],ans[0]))\n",
+    "list(ans)"
    ]
   },
   {
@@ -2512,8 +2645,161 @@
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>vals</th>\n",
+       "      <th>grps</th>\n",
+       "      <th>patched_vals</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-12</td>\n",
+       "      <td>A</td>\n",
+       "      <td>13.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-7</td>\n",
+       "      <td>B</td>\n",
+       "      <td>28.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-14</td>\n",
+       "      <td>A</td>\n",
+       "      <td>13.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>A</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-7</td>\n",
+       "      <td>A</td>\n",
+       "      <td>13.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>28</td>\n",
+       "      <td>B</td>\n",
+       "      <td>28.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>-2</td>\n",
+       "      <td>A</td>\n",
+       "      <td>13.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>-1</td>\n",
+       "      <td>A</td>\n",
+       "      <td>13.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>8</td>\n",
+       "      <td>A</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>-2</td>\n",
+       "      <td>B</td>\n",
+       "      <td>28.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>28</td>\n",
+       "      <td>A</td>\n",
+       "      <td>28.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>12</td>\n",
+       "      <td>A</td>\n",
+       "      <td>12.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>16</td>\n",
+       "      <td>A</td>\n",
+       "      <td>16.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>-24</td>\n",
+       "      <td>A</td>\n",
+       "      <td>13.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>-12</td>\n",
+       "      <td>A</td>\n",
+       "      <td>13.6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    vals grps  patched_vals\n",
+       "0    -12    A          13.6\n",
+       "1     -7    B          28.0\n",
+       "2    -14    A          13.6\n",
+       "3      4    A           4.0\n",
+       "4     -7    A          13.6\n",
+       "5     28    B          28.0\n",
+       "6     -2    A          13.6\n",
+       "7     -1    A          13.6\n",
+       "8      8    A           8.0\n",
+       "9     -2    B          28.0\n",
+       "10    28    A          28.0\n",
+       "11    12    A          12.0\n",
+       "12    16    A          16.0\n",
+       "13   -24    A          13.6\n",
+       "14   -12    A          13.6"
+      ]
+     },
+     "execution_count": 202,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "df = pd.DataFrame({\"vals\": np.random.RandomState(31).randint(-30, 30, size=15), \n",
+    "                   \"grps\": np.random.RandomState(31).choice([\"A\", \"B\"], 15)})\n",
+    "df[(df['vals']>0) & (df['grps']=='A')].vals.mean()\n",
+    "df['patched_vals'] = np.where(df['vals']>=0, df['vals'], np.where((df['vals']<0) & (df['grps']==\"A\"), df[(df['vals']>0) & (df['grps']=='A')].vals.mean(), df[(df['vals']>0) & (df['grps']=='B')].vals.mean()))\n",
+    "#here I use nested np.where to meet multiple condition. since if it was a normal code then I needed to us if, elif and else condition.\n",
+    "df"
+   ]
   },
   {
    "cell_type": "markdown",
