32 hard is completed

--- a/Data Science/Pandas/100 Pandas Puzzles/100-pandas-puzzles.ipynb
+++ b/Data Science/Pandas/100 Pandas Puzzles/100-pandas-puzzles.ipynb
@@ -2846,12 +2846,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     1.000000\n",
+       "1     1.500000\n",
+       "2     3.000000\n",
+       "3     3.000000\n",
+       "4     1.666667\n",
+       "5     3.000000\n",
+       "6     3.000000\n",
+       "7     2.000000\n",
+       "8     3.666667\n",
+       "9     2.000000\n",
+       "10    4.500000\n",
+       "11    4.000000\n",
+       "Name: value, dtype: float64"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame({'group': list('aabbabbbabab'),\n",
+    "                       'value': [1, 2, 3, np.nan, 2, 3, np.nan, 1, 7, 3, np.nan, 8]})\n",
+    "df.groupby('group')['value'].rolling(window=3,min_periods=1).mean().reset_index(level=0,drop=True).sort_index()"
+   ]
   },
   {
    "cell_type": "markdown",
