--- a/Data Science/Pandas/100 Pandas Puzzles/100-pandas-puzzles.ipynb
+++ b/Data Science/Pandas/100 Pandas Puzzles/100-pandas-puzzles.ipynb
@@ -2906,8 +2906,54 @@
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2015-01-01    29\n",
+       "2015-01-02    90\n",
+       "2015-01-05    15\n",
+       "2015-01-06     7\n",
+       "2015-01-07    24\n",
+       "2015-01-08    66\n",
+       "2015-01-09    85\n",
+       "2015-01-12    14\n",
+       "2015-01-13    91\n",
+       "2015-01-14    66\n",
+       "2015-01-15    62\n",
+       "2015-01-16    28\n",
+       "2015-01-19    58\n",
+       "2015-01-20    38\n",
+       "2015-01-21    14\n",
+       "2015-01-22    88\n",
+       "2015-01-23    43\n",
+       "2015-01-26    70\n",
+       "2015-01-27    58\n",
+       "2015-01-28    94\n",
+       "2015-01-29    45\n",
+       "2015-01-30     4\n",
+       "2015-02-02     2\n",
+       "2015-02-03    33\n",
+       "2015-02-04    94\n",
+       "2015-02-05    10\n",
+       "2015-02-06    63\n",
+       "2015-02-09    56\n",
+       "2015-02-10    92\n",
+       "2015-02-11    80\n",
+       "Freq: B, dtype: int32"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# np.random.randint(1,101,size=365)\n",
+    "bd=pd.bdate_range(\"2015-01-01\", \"2015-12-31\")\n",
+    "s=pd.Series(np.random.randint(1,100,size=len(bd)),index=bd) #index is business day and value is random numbers.\n",
+    "s.head(30)"
+   ]
   },
   {
    "cell_type": "markdown",
