34 adn 35 easy/medium completed

--- a/Data Science/Pandas/100 Pandas Puzzles/100-pandas-puzzles.ipynb
+++ b/Data Science/Pandas/100 Pandas Puzzles/100-pandas-puzzles.ipynb
@@ -2902,7 +2902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -2910,46 +2910,47 @@
     {
      "data": {
       "text/plain": [
-       "2015-01-01    29\n",
-       "2015-01-02    90\n",
-       "2015-01-05    15\n",
-       "2015-01-06     7\n",
-       "2015-01-07    24\n",
-       "2015-01-08    66\n",
-       "2015-01-09    85\n",
-       "2015-01-12    14\n",
-       "2015-01-13    91\n",
-       "2015-01-14    66\n",
-       "2015-01-15    62\n",
-       "2015-01-16    28\n",
-       "2015-01-19    58\n",
-       "2015-01-20    38\n",
-       "2015-01-21    14\n",
-       "2015-01-22    88\n",
-       "2015-01-23    43\n",
-       "2015-01-26    70\n",
-       "2015-01-27    58\n",
-       "2015-01-28    94\n",
-       "2015-01-29    45\n",
-       "2015-01-30     4\n",
-       "2015-02-02     2\n",
-       "2015-02-03    33\n",
-       "2015-02-04    94\n",
-       "2015-02-05    10\n",
-       "2015-02-06    63\n",
-       "2015-02-09    56\n",
-       "2015-02-10    92\n",
-       "2015-02-11    80\n",
+       "2015-01-01    38\n",
+       "2015-01-02    13\n",
+       "2015-01-05    73\n",
+       "2015-01-06    10\n",
+       "2015-01-07    76\n",
+       "2015-01-08     6\n",
+       "2015-01-09    80\n",
+       "2015-01-12    65\n",
+       "2015-01-13    17\n",
+       "2015-01-14     2\n",
+       "2015-01-15    77\n",
+       "2015-01-16    72\n",
+       "2015-01-19     7\n",
+       "2015-01-20    26\n",
+       "2015-01-21    51\n",
+       "2015-01-22    21\n",
+       "2015-01-23    19\n",
+       "2015-01-26    85\n",
+       "2015-01-27    12\n",
+       "2015-01-28    29\n",
+       "2015-01-29    30\n",
+       "2015-01-30    15\n",
+       "2015-02-02    51\n",
+       "2015-02-03    69\n",
+       "2015-02-04    88\n",
+       "2015-02-05    88\n",
+       "2015-02-06    95\n",
+       "2015-02-09    97\n",
+       "2015-02-10    87\n",
+       "2015-02-11    14\n",
        "Freq: B, dtype: int32"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# np.random.randint(1,101,size=365)\n",
+    "np.random.seed(1)\n",
     "bd=pd.bdate_range(\"2015-01-01\", \"2015-12-31\")\n",
     "s=pd.Series(np.random.randint(1,100,size=len(bd)),index=bd) #index is business day and value is random numbers.\n",
     "s.head(30)"
@@ -2964,12 +2965,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2727"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s[s.index.day_of_week==2].values.sum()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2980,12 +2994,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1     37.454545\n",
+       "2     52.900000\n",
+       "3     46.772727\n",
+       "4     38.318182\n",
+       "5     53.000000\n",
+       "6     51.000000\n",
+       "7     59.869565\n",
+       "8     49.666667\n",
+       "9     45.590909\n",
+       "10    55.181818\n",
+       "11    52.428571\n",
+       "12    43.565217\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.seed(1)\n",
+    "s.groupby(s.index.month).mean()\n",
+    "# np.random.randint(1,100, size=22).mean()"
+   ]
   },
   {
    "cell_type": "markdown",
