36 easy/medium completed

--- a/Data Science/Pandas/100 Pandas Puzzles/100-pandas-puzzles.ipynb
+++ b/Data Science/Pandas/100 Pandas Puzzles/100-pandas-puzzles.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -322,7 +322,7 @@
        "j    dog  3.0       1       no"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2535,32 +2535,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0    1\n",
-       "1    2\n",
-       "2    0\n",
-       "3    1\n",
-       "4    2\n",
-       "5    3\n",
-       "6    4\n",
-       "7    0\n",
-       "8    1\n",
-       "9    2\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 88,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = pd.DataFrame({'X': [7, 2, 0, 3, 4, 2, 5, 0, 3, 4]})\n",
     "Y=df.groupby((df['X']==0).cumsum()).cumcount()\n",
@@ -2902,7 +2881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -2943,7 +2922,7 @@
        "Freq: B, dtype: int32"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2965,7 +2944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -2976,7 +2955,7 @@
        "2727"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2994,7 +2973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -3017,7 +2996,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3041,8 +3020,33 @@
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Tanvir Ahmed\\AppData\\Local\\Temp\\ipykernel_16344\\1554433663.py:1: FutureWarning: 'M' is deprecated and will be removed in a future version, please use 'ME' instead.\n",
+      "  s.groupby(pd.Grouper(freq='4M')).idxmax()\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2015-01-31   2015-01-26\n",
+       "2015-05-31   2015-04-03\n",
+       "2015-09-30   2015-07-23\n",
+       "2016-01-31   2015-11-19\n",
+       "Freq: 4ME, dtype: datetime64[ns]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.groupby(pd.Grouper(freq='4M')).idxmax() #learned about pd.Grouper()"
+   ]
   },
   {
    "cell_type": "markdown",
