--- a/Data Science/Pandas/100 Pandas Puzzles/100-pandas-puzzles-with-solutions.ipynb
+++ b/Data Science/Pandas/100 Pandas Puzzles/100-pandas-puzzles-with-solutions.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1678,9 +1678,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2015-01-01    0.730994\n",
+       "2015-01-02    0.945320\n",
+       "2015-01-05    0.478634\n",
+       "2015-01-06    0.794842\n",
+       "2015-01-07    0.727734\n",
+       "                ...   \n",
+       "2015-12-25    0.383477\n",
+       "2015-12-28    0.747996\n",
+       "2015-12-29    0.336876\n",
+       "2015-12-30    0.023740\n",
+       "2015-12-31    0.821832\n",
+       "Freq: B, Length: 261, dtype: float64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "dti = pd.date_range(start='2015-01-01', end='2015-12-31', freq='B') \n",
     "s = pd.Series(np.random.rand(len(dti)), index=dti)\n",
@@ -1728,9 +1750,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Tanvir Ahmed\\AppData\\Local\\Temp\\ipykernel_14472\\1554433663.py:1: FutureWarning: 'M' is deprecated and will be removed in a future version, please use 'ME' instead.\n",
+      "  s.groupby(pd.Grouper(freq='4M')).idxmax()\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2015-01-31   2015-01-02\n",
+       "2015-05-31   2015-04-29\n",
+       "2015-09-30   2015-09-04\n",
+       "2016-01-31   2015-12-18\n",
+       "Freq: 4ME, dtype: datetime64[ns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "s.groupby(pd.Grouper(freq='4M')).idxmax()"
    ]
