--- a/Data Science/Pandas/100 Pandas Puzzles/100-pandas-puzzles.ipynb
+++ b/Data Science/Pandas/100 Pandas Puzzles/100-pandas-puzzles.ipynb
@@ -3057,12 +3057,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 111,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DatetimeIndex(['2015-01-15', '2015-02-19', '2015-03-19', '2015-04-16',\n",
+       "               '2015-05-21', '2015-06-18', '2015-07-16', '2015-08-20',\n",
+       "               '2015-09-17', '2015-10-15', '2015-11-19', '2015-12-17',\n",
+       "               '2016-01-21', '2016-02-18', '2016-03-17', '2016-04-21',\n",
+       "               '2016-05-19', '2016-06-16', '2016-07-21', '2016-08-18',\n",
+       "               '2016-09-15', '2016-10-20', '2016-11-17', '2016-12-15'],\n",
+       "              dtype='datetime64[ns]', freq='WOM-3THU')"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d=pd.date_range('2015','2017',freq=\"WOM-3THU\")\n",
+    "d\n",
+    "# # d.groupby(d.month)\n",
+    "# dt=d[d.dayofweek==3]\n",
+    "# dt"
+   ]
   },
   {
    "cell_type": "markdown",
