38 easy/medium completed

--- a/Data Science/Pandas/100 Pandas Puzzles/100-pandas-puzzles.ipynb
+++ b/Data Science/Pandas/100 Pandas Puzzles/100-pandas-puzzles.ipynb
@@ -3137,8 +3137,98 @@
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>From_To</th>\n",
+       "      <th>FlightNumber</th>\n",
+       "      <th>RecentDelays</th>\n",
+       "      <th>Airline</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>LoNDon_paris</td>\n",
+       "      <td>10045</td>\n",
+       "      <td>[23, 47]</td>\n",
+       "      <td>KLM(!)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>MAdrid_miLAN</td>\n",
+       "      <td>10055</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>&lt;Air France&gt; (12)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>londON_StockhOlm</td>\n",
+       "      <td>10065</td>\n",
+       "      <td>[24, 43, 87]</td>\n",
+       "      <td>(British Airways. )</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Budapest_PaRis</td>\n",
+       "      <td>10075</td>\n",
+       "      <td>[13]</td>\n",
+       "      <td>12. Air France</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Brussels_londOn</td>\n",
+       "      <td>10085</td>\n",
+       "      <td>[67, 32]</td>\n",
+       "      <td>\"Swiss Air\"</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            From_To  FlightNumber  RecentDelays              Airline\n",
+       "0      LoNDon_paris         10045      [23, 47]               KLM(!)\n",
+       "1      MAdrid_miLAN         10055            []    <Air France> (12)\n",
+       "2  londON_StockhOlm         10065  [24, 43, 87]  (British Airways. )\n",
+       "3    Budapest_PaRis         10075          [13]       12. Air France\n",
+       "4   Brussels_londOn         10085      [67, 32]          \"Swiss Air\""
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame({'From_To': ['LoNDon_paris', 'MAdrid_miLAN', 'londON_StockhOlm', \n",
+    "                               'Budapest_PaRis', 'Brussels_londOn'],\n",
+    "              'FlightNumber': [10045, np.nan, 10065, np.nan, 10085],\n",
+    "              'RecentDelays': [[23, 47], [], [24, 43, 87], [13], [67, 32]],\n",
+    "                   'Airline': ['KLM(!)', '<Air France> (12)', '(British Airways. )', \n",
+    "                               '12. Air France', '\"Swiss Air\"']})\n",
+    "df['FlightNumber']=df['FlightNumber'].interpolate().astype('int') #Interpolation is the process of estimating missing values based on existing data points\n",
+    "df"
+   ]
   },
   {
    "cell_type": "markdown",
