--- a/Data Science/Pandas/100 Pandas Puzzles/100-pandas-puzzles.ipynb
+++ b/Data Science/Pandas/100 Pandas Puzzles/100-pandas-puzzles.ipynb
@@ -3133,7 +3133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 139,
    "metadata": {
     "collapsed": true
    },
@@ -3214,7 +3214,7 @@
        "4   Brussels_londOn         10085      [67, 32]          \"Swiss Air\""
       ]
      },
-     "execution_count": 118,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3243,8 +3243,101 @@
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>FlightNumber</th>\n",
+       "      <th>RecentDelays</th>\n",
+       "      <th>Airline</th>\n",
+       "      <th>From</th>\n",
+       "      <th>To</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10045</td>\n",
+       "      <td>[23, 47]</td>\n",
+       "      <td>KLM(!)</td>\n",
+       "      <td>LoNDon</td>\n",
+       "      <td>paris</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10055</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>&lt;Air France&gt; (12)</td>\n",
+       "      <td>MAdrid</td>\n",
+       "      <td>miLAN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10065</td>\n",
+       "      <td>[24, 43, 87]</td>\n",
+       "      <td>(British Airways. )</td>\n",
+       "      <td>londON</td>\n",
+       "      <td>StockhOlm</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10075</td>\n",
+       "      <td>[13]</td>\n",
+       "      <td>12. Air France</td>\n",
+       "      <td>Budapest</td>\n",
+       "      <td>PaRis</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10085</td>\n",
+       "      <td>[67, 32]</td>\n",
+       "      <td>\"Swiss Air\"</td>\n",
+       "      <td>Brussels</td>\n",
+       "      <td>londOn</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   FlightNumber  RecentDelays              Airline      From         To\n",
+       "0         10045      [23, 47]               KLM(!)    LoNDon      paris\n",
+       "1         10055            []    <Air France> (12)    MAdrid      miLAN\n",
+       "2         10065  [24, 43, 87]  (British Airways. )    londON  StockhOlm\n",
+       "3         10075          [13]       12. Air France  Budapest      PaRis\n",
+       "4         10085      [67, 32]          \"Swiss Air\"  Brussels     londOn"
+      ]
+     },
+     "execution_count": 160,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp=df.copy()\n",
+    "temp[['From','To']]=temp['From_To'].str.split(\"_\",expand=True) #method is used when you want the result of the split operation to be returned as a DataFrame or a 2D array\n",
+    "# temp[\"To\"]=temp[\"From_To\"][1]\n",
+    "temp.drop(columns=['From_To'],inplace=True)\n",
+    "temp"
+   ]
   },
   {
    "cell_type": "markdown",
