--- a/Data Science/Pandas/100 Pandas Puzzles/100-pandas-puzzles.ipynb
+++ b/Data Science/Pandas/100 Pandas Puzzles/100-pandas-puzzles.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -322,7 +322,7 @@
        "j    dog  3.0       1       no"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3133,7 +3133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -3214,7 +3214,7 @@
        "4   Brussels_londOn         10085      [67, 32]          \"Swiss Air\""
       ]
      },
-     "execution_count": 139,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3239,7 +3239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -3326,7 +3326,7 @@
        "4         10085      [67, 32]          \"Swiss Air\"  Brussels     londOn"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3352,8 +3352,101 @@
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>FlightNumber</th>\n",
+       "      <th>RecentDelays</th>\n",
+       "      <th>Airline</th>\n",
+       "      <th>From</th>\n",
+       "      <th>To</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10045</td>\n",
+       "      <td>[23, 47]</td>\n",
+       "      <td>KLM(!)</td>\n",
+       "      <td>London</td>\n",
+       "      <td>Paris</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10055</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>&lt;Air France&gt; (12)</td>\n",
+       "      <td>Madrid</td>\n",
+       "      <td>Milan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10065</td>\n",
+       "      <td>[24, 43, 87]</td>\n",
+       "      <td>(British Airways. )</td>\n",
+       "      <td>London</td>\n",
+       "      <td>Stockholm</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10075</td>\n",
+       "      <td>[13]</td>\n",
+       "      <td>12. Air France</td>\n",
+       "      <td>Budapest</td>\n",
+       "      <td>Paris</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10085</td>\n",
+       "      <td>[67, 32]</td>\n",
+       "      <td>\"Swiss Air\"</td>\n",
+       "      <td>Brussels</td>\n",
+       "      <td>London</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   FlightNumber  RecentDelays              Airline      From         To\n",
+       "0         10045      [23, 47]               KLM(!)    London      Paris\n",
+       "1         10055            []    <Air France> (12)    Madrid      Milan\n",
+       "2         10065  [24, 43, 87]  (British Airways. )    London  Stockholm\n",
+       "3         10075          [13]       12. Air France  Budapest      Paris\n",
+       "4         10085      [67, 32]          \"Swiss Air\"  Brussels     London"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp\n",
+    "temp['From']=temp.From.str.capitalize()\n",
+    "temp['To']=temp.To.str.capitalize()\n",
+    "# temp.drop(columns=['T0'],inplace=True)\n",
+    "temp #easy"
+   ]
   },
   {
    "cell_type": "markdown",
