--- a/Data Science/Pandas/100 Pandas Puzzles/100-pandas-puzzles.ipynb
+++ b/Data Science/Pandas/100 Pandas Puzzles/100-pandas-puzzles.ipynb
@@ -3457,7 +3457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
@@ -3544,7 +3544,7 @@
        "4         10085      [67, 32]          \"Swiss Air\"  Brussels     London"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3552,7 +3552,8 @@
    "source": [
     "df\n",
     "# df.drop(columns=['From_To'],inplace=True)\n",
-    "df.join(temp[['From','To']])"
+    "df=df.join(temp[['From','To']])\n",
+    "df"
    ]
   },
   {
@@ -3564,12 +3565,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>FlightNumber</th>\n",
+       "      <th>RecentDelays</th>\n",
+       "      <th>Airline</th>\n",
+       "      <th>From</th>\n",
+       "      <th>To</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10045</td>\n",
+       "      <td>[23, 47]</td>\n",
+       "      <td>KLM</td>\n",
+       "      <td>London</td>\n",
+       "      <td>Paris</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10055</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>Air France</td>\n",
+       "      <td>Madrid</td>\n",
+       "      <td>Milan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10065</td>\n",
+       "      <td>[24, 43, 87]</td>\n",
+       "      <td>British Airways</td>\n",
+       "      <td>London</td>\n",
+       "      <td>Stockholm</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10075</td>\n",
+       "      <td>[13]</td>\n",
+       "      <td>Air France</td>\n",
+       "      <td>Budapest</td>\n",
+       "      <td>Paris</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10085</td>\n",
+       "      <td>[67, 32]</td>\n",
+       "      <td>Swiss Air</td>\n",
+       "      <td>Brussels</td>\n",
+       "      <td>London</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   FlightNumber  RecentDelays           Airline      From         To\n",
+       "0         10045      [23, 47]               KLM    London      Paris\n",
+       "1         10055            []       Air France     Madrid      Milan\n",
+       "2         10065  [24, 43, 87]  British Airways     London  Stockholm\n",
+       "3         10075          [13]        Air France  Budapest      Paris\n",
+       "4         10085      [67, 32]         Swiss Air  Brussels     London"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Airline']=df['Airline'].str.replace(r'[^A-za-z\\s]','',regex=True)\n",
+    "df"
+   ]
   },
   {
    "cell_type": "markdown",
