--- a/Data Science/Pandas/100 Pandas Puzzles/100-pandas-puzzles-with-solutions.ipynb
+++ b/Data Science/Pandas/100 Pandas Puzzles/100-pandas-puzzles-with-solutions.ipynb
@@ -2226,9 +2226,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:1: SyntaxWarning: invalid escape sequence '\\s'\n",
+      "<>:1: SyntaxWarning: invalid escape sequence '\\s'\n",
+      "C:\\Users\\Tanvir Ahmed\\AppData\\Local\\Temp\\ipykernel_17048\\2071414522.py:1: SyntaxWarning: invalid escape sequence '\\s'\n",
+      "  df['Airline'] = df['Airline'].str.extract('([a-zA-Z\\s]+)', expand=False).str.strip()\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>FlightNumber</th>\n",
+       "      <th>RecentDelays</th>\n",
+       "      <th>Airline</th>\n",
+       "      <th>From</th>\n",
+       "      <th>To</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10045</td>\n",
+       "      <td>[23, 47]</td>\n",
+       "      <td>KLM</td>\n",
+       "      <td>London</td>\n",
+       "      <td>Paris</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10055</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>Air France</td>\n",
+       "      <td>Madrid</td>\n",
+       "      <td>Milan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10065</td>\n",
+       "      <td>[24, 43, 87]</td>\n",
+       "      <td>British Airways</td>\n",
+       "      <td>London</td>\n",
+       "      <td>Stockholm</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10075</td>\n",
+       "      <td>[13]</td>\n",
+       "      <td>Air France</td>\n",
+       "      <td>Budapest</td>\n",
+       "      <td>Paris</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10085</td>\n",
+       "      <td>[67, 32]</td>\n",
+       "      <td>Swiss Air</td>\n",
+       "      <td>Brussels</td>\n",
+       "      <td>London</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   FlightNumber  RecentDelays          Airline      From         To\n",
+       "0         10045      [23, 47]              KLM    London      Paris\n",
+       "1         10055            []       Air France    Madrid      Milan\n",
+       "2         10065  [24, 43, 87]  British Airways    London  Stockholm\n",
+       "3         10075          [13]       Air France  Budapest      Paris\n",
+       "4         10085      [67, 32]        Swiss Air  Brussels     London"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df['Airline'] = df['Airline'].str.extract('([a-zA-Z\\s]+)', expand=False).str.strip()\n",
     "# note: using .strip() gets rid of any leading/trailing spaces\n",
