--- a/Data Science/Pandas/100 Pandas Puzzles/100-pandas-puzzles.ipynb
+++ b/Data Science/Pandas/100 Pandas Puzzles/100-pandas-puzzles.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -322,7 +322,7 @@
        "j    dog  3.0       1       no"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3133,7 +3133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
@@ -3214,7 +3214,7 @@
        "4   Brussels_londOn         10085      [67, 32]          \"Swiss Air\""
       ]
      },
-     "execution_count": 4,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3348,7 +3348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -3673,12 +3673,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>From_To</th>\n",
+       "      <th>FlightNumber</th>\n",
+       "      <th>Airline</th>\n",
+       "      <th>delay_1</th>\n",
+       "      <th>delay_2</th>\n",
+       "      <th>delay_3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>LoNDon_paris</td>\n",
+       "      <td>10045</td>\n",
+       "      <td>KLM(!)</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>47.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>MAdrid_miLAN</td>\n",
+       "      <td>10055</td>\n",
+       "      <td>&lt;Air France&gt; (12)</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>londON_StockhOlm</td>\n",
+       "      <td>10065</td>\n",
+       "      <td>(British Airways. )</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>87.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Budapest_PaRis</td>\n",
+       "      <td>10075</td>\n",
+       "      <td>12. Air France</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Brussels_londOn</td>\n",
+       "      <td>10085</td>\n",
+       "      <td>\"Swiss Air\"</td>\n",
+       "      <td>67.0</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            From_To  FlightNumber              Airline  delay_1  delay_2  \\\n",
+       "0      LoNDon_paris         10045               KLM(!)     23.0     47.0   \n",
+       "1      MAdrid_miLAN         10055    <Air France> (12)      NaN      NaN   \n",
+       "2  londON_StockhOlm         10065  (British Airways. )     24.0     43.0   \n",
+       "3    Budapest_PaRis         10075       12. Air France     13.0      NaN   \n",
+       "4   Brussels_londOn         10085          \"Swiss Air\"     67.0     32.0   \n",
+       "\n",
+       "   delay_3  \n",
+       "0      NaN  \n",
+       "1      NaN  \n",
+       "2     87.0  \n",
+       "3      NaN  \n",
+       "4      NaN  "
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# n=df['RecentDelays'].apply(len).max()\n",
+    "# column=[f'delay_{i}' for i in range(1,n+1)]\n",
+    "# delays=df['RecentDelays'].apply(pd.Series)\n",
+    "# delays.columns=column\n",
+    "# df=pd.merge(df,delays,left_index=True,right_index=True)\n",
+    "# df.drop('RecentDelays',axis=1,inplace=True)\n",
+    "df"
+   ]
   },
   {
    "cell_type": "markdown",
